editable stat fields added

--- a/src/app/profession-stats/profession-stats.component.html
+++ b/src/app/profession-stats/profession-stats.component.html
@@ -8,7 +8,8 @@
       <p>{{ stat.name }}</p>
       <div class="button-wrapper">
         <button *ngIf="allowEdit" class="btn btn-danger btn-small" (click)="decrementStat('profession', statIndex)" [disabled]="stat.level === 3">-</button>
-        <span>{{ stat.level }}</span>
+        <span *ngIf="allowEdit" (click)="setStat(statIndex, stat.name)">{{ stat.level }}</span>        
+        <span *ngIf="!allowEdit">{{ stat.level }}</span>
         <button *ngIf="allowEdit" class="btn btn-primary btn-small" (click)="incrementStat('profession', statIndex)" [disabled]="stat.level === 20">+</button>
       </div>
     </div>
