--- a/src/app/profession-stats/profession-stats.component.html
+++ b/src/app/profession-stats/profession-stats.component.html
@@ -16,6 +16,6 @@
   </div>
   <div class="button-wrapper">
     <button class="btn btn-primary" (click)="enableEdit()" [disabled]="allowEdit">Edit</button>
-    <button class="btn btn-primary" (click)="onSave()">Save</button>
+    <button class="btn btn-primary" (click)="onSave()" [disabled]="!allowEdit">Save</button>
   </div>
 </ng-container>
