--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -30,6 +30,6 @@
 
   <div class="button-wrapper">
     <button class="btn btn-primary" (click)="enableEdit()" [disabled]="allowEdit">Edit</button>
-    <button class="btn btn-primary" (click)="onSave()">Save</button>
+    <button class="btn btn-primary" (click)="onSave()" [disabled]="!allowEdit">Save</button>
   </div>
 </ng-container>
