--- a/src/sass/forms.scss
+++ b/src/sass/forms.scss
@@ -17,6 +17,10 @@ textarea {
         margin-bottom: 5px;
         font-weight: 700;
     }
+
+    option {
+        color: black !important;
+    }
 }
 .form-control {
     display: block;
@@ -28,7 +32,7 @@ textarea {
 
     font-size: 14px;
     line-height: 1.42857143;
-    color: #555;
+    color: #555 !important;
     background-color: #F2F2F2;
     background-image: none;
     border: 1px solid #ccc;
