--- a/src/app/character/character-list/character-list.component.html
+++ b/src/app/character/character-list/character-list.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="character-links">
                 <a class="btn btn-primary" (click)="onSelectCharacter(i)">
-                    <i class="material-icons">touch_app</i>
+                    <i class="material-icons">pan_tool</i>
                 </a>
                 <a class="btn btn-default" [routerLink]="['/characters', i, 'edit']">
                     <i class="material-icons">&#xE254;</i>
