--- a/src/sass/forms.scss
+++ b/src/sass/forms.scss
@@ -30,7 +30,7 @@ textarea {
     padding: 6px 12px;
     margin: 0;
 
-    font-size: 14px;
+    font-size: 1em;
     line-height: 1.42857143;
     color: #555 !important;
     background-color: #F2F2F2;
