UI colouring updates

--- a/src/app/character-sub/npc/npc.component.html
+++ b/src/app/character-sub/npc/npc.component.html
@@ -8,7 +8,7 @@
         <p class="inventory-item-description" [innerHtml]="npc.description">
         </p>
         <div class="inventory-buttons">
-          <button class="btn btn-primary" (click)="editNpc(npcIndex, npc)">
+          <button class="btn btn-default" (click)="editNpc(npcIndex, npc)">
               <i class="material-icons">&#xE254;</i>
           </button>
           <button class="btn btn-danger" (click)="removeNpc(npcIndex)">
