--- a/src/app/character-sub/inventory/inventory.component.html
+++ b/src/app/character-sub/inventory/inventory.component.html
@@ -22,7 +22,7 @@
       <p class="inventory-item-description">{{ item.description }}</p>
       <div class="inventory-buttons">
         <button class="btn btn-primary" *ngIf="item.consumable" (click)="useItem(itemIndex)">Use</button>
-        <button class="btn btn-primary" (click)="editItem(itemIndex)">
+        <button class="btn btn-default" (click)="editItem(itemIndex)">
             <i class="material-icons">&#xE254;</i>
         </button>        
         <button class="btn btn-danger" (click)="removeItem(itemIndex)">
