minor visual update

--- a/src/app/character-sub/abilities/abilities.component.html
+++ b/src/app/character-sub/abilities/abilities.component.html
@@ -28,7 +28,7 @@
         </p>
         <p class="inventory-item-description">{{ ability.description }}</p>
         <div class="inventory-buttons">
-          <button class="btn btn-primary" (click)="editAbility(abilityIndex, ability)">
+          <button class="btn btn-default" (click)="editAbility(abilityIndex, ability)">
             <i class="material-icons">&#xE254;</i>
           </button>
           <button class="btn btn-danger" (click)="removeAbility(abilityIndex)">
