recap feature added

--- a/src/app/infrastructure/header/header.component.html
+++ b/src/app/infrastructure/header/header.component.html
@@ -20,6 +20,9 @@
     <li routerLinkActive="active">
       <a [routerLink]="['/player-notes']">My Notes</a>
     </li>
+    <li routerLinkActive="active">
+      <a [routerLink]="['/story-recap']">Story Recap</a>
+    </li>
     <li class="nav-dark">
       <a (click)="onLogout()">Logout</a>
     </li>
