big inventory update: icons

--- a/src/sass/forms.scss
+++ b/src/sass/forms.scss
@@ -19,7 +19,7 @@ textarea {
         font-weight: 700;
     }
 
-    option {
+    textarea, select, option {
         color: black !important;
     }
 }
