combat sheet (in progress)

--- a/src/app/character-sub/questlog/questlog.component.html
+++ b/src/app/character-sub/questlog/questlog.component.html
@@ -30,10 +30,12 @@
       </p>
       <p class="inventory-item-description">{{ quest.description }}</p>
       <div class="inventory-buttons">
-        <button class="btn btn-primary" (click)="editQuest(quest.originId, quest)">
+        <button class="btn btn-default" (click)="editQuest(quest.originId, quest)">
             <i class="material-icons">&#xE254;</i>
         </button>
-        <button class="btn btn-danger" (click)="removeQuest(quest.originId)">Remove</button>
+        <button class="btn btn-danger" (click)="removeQuest(quest.originId)">
+          <i class="material-icons">delete_forever</i>
+        </button>
       </div>
     </div>
   </div>
