--- a/src/app/character-sub/combat-sheet-list/combat-sheet-list.component.html
+++ b/src/app/character-sub/combat-sheet-list/combat-sheet-list.component.html
@@ -30,13 +30,13 @@
         <label for="name">name</label>
         <input type="text" id="name" class="form-control" [(ngModel)]="newSheet.name" />
     </div>
-    <div class="form-group">
-        <label for="ini">initiative (optional)</label>
-        <input type="number" id="ini" class="form-control" [(ngModel)]="newSheet.initiative" />
-    </div>
     <div class="checkbox">
         <label>
             <input type="checkbox" value="" [(ngModel)]="newSheet.autoRoll">auto roll enabled</label>
+    </div>
+    <div class="form-group" *ngIf="!newSheet.autoRoll">
+        <label for="ini">initiative</label>
+        <input type="number" id="ini" class="form-control" [(ngModel)]="newSheet.initiative" />
     </div>
     <button class="btn btn-primary" (click)="addSheet()">Save</button>
     <a (click)="cancelAddSheet()" class="btn btn-default">Cancel</a>
