--- a/src/app/character-sub/combat-sheet/combat-sheet.component.scss
+++ b/src/app/character-sub/combat-sheet/combat-sheet.component.scss
@@ -20,6 +20,84 @@
     }
 }
 
+.actionWrapper {
+    box-sizing: border-box;
+    padding-top: 20px;
+    padding-bottom: 116px;
+
+    .action {
+        margin-bottom: 20px;
+        &:last-of-type {
+            margin-bottom: 0;
+        }
+    }
+}
+
+.ability {
+    width: 100%;
+    max-width: 880px;
+    box-sizing: border-box;
+
+    .abilityInfo {        
+        background-color:rgba(0, 0, 0, 0.3);
+        border: 2px solid black;
+        padding: 10px;
+
+        p {
+            color: $primary-color;
+            display: inline-block;
+            span {
+                display: inline-block;
+            }
+        }
+    }
+    .abilityRolls {
+        display: flex;
+        justify-content: flex-end;
+
+        .abilityRoll {
+            display: flex;
+            border: 2px solid black;
+            border-top: 0;
+            & + .abilityRoll {
+                border-left: 0;
+            }
+            p {
+                border-top: 0;
+                padding: 5px 0;
+                width: 36px;
+                text-align: center;
+                color: $primary-color;
+            }
+            span {
+                display: inline-block;
+                padding: 5px 10px;
+                background-color:  rgba(0, 0, 0, 0.3);
+            }
+        }
+    }
+}
+
+.item {
+    width: 100%;
+    max-width: 880px;
+    box-sizing: border-box;
+
+    .itemInfo {        
+        background-color:rgba(0, 0, 0, 0.3);
+        border: 2px solid black;
+        padding: 10px;
+
+        p {
+            color: $primary-color;
+            display: inline-block;
+            span {
+                display: inline-block;
+            }
+        }
+    }
+}
+
 .buttonWrapper {
     display: flex;
     flex-wrap: wrap;
@@ -27,6 +105,7 @@
     bottom: 0;
     left: 0;
     background-color: $primary-color;
+    box-sizing: border-box;
     width: 100%;
 
     a {
@@ -49,6 +128,9 @@
 }
 
 @media (min-width: 768px) {
+    .actionWrapper {
+        padding-top: 60px;
+    }
     .buttonWrapper {
         max-width: 880px;
         margin: 0 auto;
