--- a/src/app/character-sub/item-chooser/item-chooser.component.scss
+++ b/src/app/character-sub/item-chooser/item-chooser.component.scss
@@ -35,7 +35,7 @@
         i {
             position: absolute;
             top: 0;
-            right: 0;
+            right: 10px;
             padding: 5px;
             background-color: $primary-color;
             border: 2px solid white;
