--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,7 +5,10 @@ $primary-color-dark: #0379b0;
 $background-color: #242424;
 
 $hightlight-color: #333;
+$effect-color: #43CE7F;
+$wound-color: #ED4337;
 
 $btn-primary-color: #F2F2F2;
 $btn-default-color: #F2F2F2;
 $btn-danger-color: #F2F2F2;
+$btn-action-color: #02587F;
