--- a/src/app/main/components/character/character-new/character-new.component.html
+++ b/src/app/main/components/character/character-new/character-new.component.html
@@ -7,7 +7,13 @@
   </div>
   <div class="form-group">
     <label for="className">class</label>
-    <input type="text" id="className" class="form-control" [(ngModel)]="character.className" />
+    <select name="className" id="className" class="form-control" [(ngModel)]="character.className">
+      <option value="Base Class">Base Class</option>
+      <option value="Chromatic Warrior">Chromatic Warrior</option>
+      <option value="Draconic Blood Knight">Draconic Blood Knight</option>
+      <option value="Elementalist">Elementalist</option>
+      <option value="Tyrian Order of Godseekers: Hellraiser">Tyrian Order of Godseekers: Hellraiser</option>
+    </select>
   </div>
   <div class="form-group">
     <label for="race">race</label>
