--- a/src/app/main/components/character/character-list/character-list.component.html
+++ b/src/app/main/components/character/character-list/character-list.component.html
@@ -34,6 +34,6 @@
 </ng-container>
 
 <div class="button-wrapper">
-    <a [routerLink]="['/characters', 'new']" class="btn btn-primary">New Character</a>
+    <a (click)="onNewCharacter()" class="btn btn-primary">New Character</a>
     <button *ngIf="charactersFetched && characters.length > 0" (click)="onSave()" class="btn btn-default">Save All</button>
 </div>
