added player balance

--- a/src/app/main/components/infrastructure/header/header.component.html
+++ b/src/app/main/components/infrastructure/header/header.component.html
@@ -10,6 +10,9 @@
       <a [routerLink]="['/player-notes']">My Notes</a>
     </li>
     <li routerLinkActive="active">
+      <a [routerLink]="['/player-balance']">My Balance</a>
+    </li>
+    <li routerLinkActive="active">
       <a [routerLink]="['/story-recap']">Story Recap</a>
     </li>
     <li class="nav-dark">
