updated combat sheet copying for chaos mages

--- a/src/app/combat/components/classes/chaosMage/combat-sheet/combat-sheet-chaos-mage.component.html
+++ b/src/app/combat/components/classes/chaosMage/combat-sheet/combat-sheet-chaos-mage.component.html
@@ -61,6 +61,9 @@
         <a (click)="showItems()">
             <i class="material-icons">invert_colors</i>
         </a>
+        <a (click)="setPainMeter()">
+            <i class="material-icons">blur_on</i>
+        </a>
         <a (click)="updateStatusEffects()" *ngIf="currentSheet.statusEffects.length > 0">
             <i class="material-icons">access_time</i>
         </a>
