--- a/src/app/combat/components/classes/default/combat-sheet/combat-sheet.component.html
+++ b/src/app/combat/components/classes/default/combat-sheet/combat-sheet.component.html
@@ -56,8 +56,8 @@
         <a (click)="showItems()">
             <i class="material-icons">invert_colors</i>
         </a>
-        <a (click)="setPainMeter()">
-            <i class="material-icons">blur_on</i>
+        <a (click)="showMinions()">
+            <i class="material-icons">pets</i>
         </a>
         <a (click)="updateStatusEffects()" *ngIf="currentSheet.statusEffects.length > 0">
             <i class="material-icons">access_time</i>
@@ -127,4 +127,14 @@
     <app-item-chooser *ngIf="character && currentSheet" [inventory]="character.inventory" (itemSelected)="useConsumable($event)"
         (itemCanceled)="cancelItem()">
     </app-item-chooser>
+</ng-container>
+
+<ng-container *ngIf="minionsVisible">
+    <app-minion-chooser *ngIf="character && currentSheet" 
+        [minionSheets]="currentSheet.minionWoundSheets" 
+        (minionSelected)="selectMinion($event)"
+        (minionAdded)="onAddMinion($event)"
+        (minionRemoved)="onRemoveMinion($event)"
+        (minionCanceled)="cancelMinion()">
+    </app-minion-chooser>
 </ng-container>
