--- a/src/app/main/components/character/character-new/character-new.component.html
+++ b/src/app/main/components/character/character-new/character-new.component.html
@@ -1,33 +1,38 @@
 <h1>New Character</h1>
 
 <div *ngIf="character !== undefined">
-  <div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" id="name" class="form-control" [(ngModel)]="character.name" />
-  </div>
-  <div class="form-group">
-    <label for="className">class</label>
-    <select name="className" id="className" class="form-control" [(ngModel)]="character.className">
-      <option value="Base Class">Base Class</option>
-      <option value="Chaos Mage">Unknown</option>
-      <option value="Draconic Blood Knight">Draconic Blood Knight</option>
-      <option value="Elementalist">Elementalist</option>
-      <option value="Necromancer">Necromancer</option>
-      <option value="Tyrian Order of Godseekers: Hellraiser">Tyrian Order of Godseekers: Hellraiser</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="race">race</label>
-    <input type="text" id="race" class="form-control" [(ngModel)]="character.race" />
-  </div>
-  <div class="form-group">
-    <label for="description">description</label>
-    <textarea rows="10" id="description" class="form-control" [(ngModel)]="character.description"></textarea>
-  </div>
-  <div class="form-group">
-    <label for="age">age</label>
-    <input type="number" id="age" class="form-control" [(ngModel)]="character.age" />
-  </div>
-  <button class="btn btn-primary" (click)="onSaveCharacter()">Save</button>
+    <div class="form-group">
+        <mat-form-field>
+          <input matInput placeholder="name" type="text" id="name" [(ngModel)]="character.name" />
+        </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field>
+          <mat-select placeholder="className" id="className" class="form-control" [(ngModel)]="character.className">
+            <mat-option value="Default">Default</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field>
+          <input matInput type="text" id="race" placeholder="race" class="form-control" [(ngModel)]="character.race" />
+        </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field>
+          <textarea matInput matTextAreaAutoSize id="description" placeholder="description" class="form-control" [(ngModel)]="character.description"></textarea>
+        </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field>
+          <input matInput type="number" id="age" placeholder="age" class="form-control" [(ngModel)]="character.age" />
+        </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field>
+          <input matInput type="number" id="level" placeholder="level" class="form-control" [(ngModel)]="character.level" />
+        </mat-form-field>
+      </div>
+      <button class="btn btn-primary" (click)="onSaveCharacter()">Save</button>
   <button class="btn btn-default" (click)="onCancel()">Cancel</button>
 </div>
