--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,7 @@
 // app colors
 
-$primary-color: #0397dd;
-$primary-color-dark: #0379b0;
+$primary-color: #2196f3;
+$primary-color-dark: #156baf;
 $background-color: #242424;
 
 $hightlight-color: #333;
