textarea autosize fix

--- a/src/app/main/components/infrastructure/player-notes/player-notes.component.html
+++ b/src/app/main/components/infrastructure/player-notes/player-notes.component.html
@@ -10,7 +10,7 @@
 <ng-container *ngIf="noteEdit">
   <div class="form-group">
     <mat-form-field>
-        <textarea matInput matTextareaAutoSize placeholder="My notes" id="playerNotes" class="form-control" [(ngModel)]="playerNotes"></textarea>
+        <textarea matInput matTextareaAutosize placeholder="My notes" id="playerNotes" class="form-control" [(ngModel)]="playerNotes"></textarea>
     </mat-form-field>
   </div>
   <button class="btn btn-primary" (click)="saveNotes()">Save</button>
