added world map

--- a/src/app/main/components/infrastructure/header/header.component.html
+++ b/src/app/main/components/infrastructure/header/header.component.html
@@ -55,6 +55,9 @@
       <a [routerLink]="['/player-balance']">My Balance</a>
     </li>
     <li routerLinkActive="active" class="nav-darker">
+      <a [routerLink]="['/world-map']">World map</a>
+    </li>
+    <li routerLinkActive="active" class="nav-darker">
       <a [routerLink]="['/story-recap']">Story Recap</a>
     </li>
     <li class="nav-dark">
