added the world map db sync

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -136,3 +136,7 @@ p, li, a, span {
 .mat-fab.mat-accent {
     background-color: $primary-color;
 }
+
+.mat-mini-fab.mat-accent {
+    background-color: $primary-color;
+}
